added navbar and fixed toggle nav error

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@
     @apply font-publicSans;
   }
 }
+
+@layer components {
+  .link {
+    @apply hover:scale-110 transition-all duration-100;
+    @apply md:pb-2 md:hover:border-b-2 border-neutral_500 transition-all duration-100;
+  }
+}
